--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="crawler">
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/web/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/engine/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/web/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/engine/src/test/java"/>
         <property name="context-root" value="crawler"/>
         <property name="java-output-path" value="/crawler/target/classes"/>
     </wb-module>
